--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "zen",
   "displayName": "zen",
+  "publisher": "coffeemil",
   "description": "",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "engines": {
     "vscode": "^1.95.0"
   },
+  "icon": "assets/favicon.png",
   "categories": [
     "Other"
   ],
