--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "displayName": "zen",
   "publisher": "coffeemil",
   "description": "",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "engines": {
     "vscode": "^1.95.0"
   },
-  "icon": "assets/favicon.png",
+  "icon": "favicon.png",
   "categories": [
     "Other"
   ],
